--- a/pages/HomePage/index.css
+++ b/pages/HomePage/index.css
@@ -54,6 +54,158 @@ main .navigation .bottom .user .avatar {
     margin: 0;
 }
 
+/* Navigation-btn-chat */
+
+.hide .chat span {
+    display: none;
+}
+
+.chat {
+    display: flex;
+    justify-content: center;
+    width: auto;
+    border: 1px solid #DDDDDD;
+    padding: 16px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.hide .chat {
+    width: auto;
+}
+
+.chat span {
+    margin-left: 12px;
+}
+
+/* Navigation */
+
+.navigation__list {
+    margin-top: 15px;
+}
+
+.hide .navigation__list-item {
+    padding: 30px 40px;
+}
+
+.hide .navigation__list-item svg {
+    width: 20px;
+    height: 20px;
+}
+
+.navigation.hide {
+    max-width: 100px;
+}
+
+main .navigation .bottom {
+    display: flex;
+    flex-direction: column;
+    padding: 0 12px;
+}
+
+.book-a-demo {
+    margin-bottom: 24px;
+}
+
+.user {
+    padding: 16px 14px;
+}
+
+.mini {
+    width: 48px;
+    height: 48px;
+}
+
+/* Navigation-btn-chat-mobile */
+
+.btn-chat-mobile {
+    position: fixed;
+    right: 8px;
+    bottom: 8px;
+    display: none;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: none;
+    background-color: var(--purple-400);
+    cursor: pointer;
+}
+
+/* Custom slider */
+.slider{
+    position: relative;
+    display: flex;
+    gap: 20px;
+    margin: auto;
+    margin-bottom: 15px;
+}
+
+/* Кнопки вперед и назад */
+.slider .prev, .slider .next {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    background-color: var(--purple-100);
+    transition: 0.6s ease;
+    border-radius: 50%;
+    opacity: 0.4;
+}
+
+.slider .next {
+    right: -10px;
+}
+
+.slider .prev {
+    left: -10px;
+}
+
+.slider .prev svg {
+    transform: rotate(180deg);
+}
+
+/* При наведении на кнопки добавляем фон кнопок */
+.slider .prev:hover,
+.slider .next:hover {
+    opacity: 1;
+}
+/* Анимация слайдов */
+.slider .item {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+@-webkit-keyframes fade {
+    from {
+        opacity: .4;
+        transform: translateX(100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+@keyframes fade {
+    from {
+        opacity: .4;
+        transform: translateX(100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+} 
+
+
 /*Empty-container*/
 
 .empty-title {
@@ -69,6 +221,12 @@ main .navigation .bottom .user .avatar {
 
 /*Side-menu*/
 
+
+aside {
+    min-width: 448px;
+    padding: 20px 20px 20px 0;
+}
+
 aside .side-menu {
     display: block;
     height: 100%;
@@ -80,14 +238,26 @@ aside .side-menu {
 aside .side-menu .card {
     display: grid;
     grid-template-columns: 1fr 120px;
-    gap: 12px 16px;
+    gap: 12px;
     margin-bottom: 40px;
+}
+
+.card-tomorrow-event .arrow-icon {
+    display: none;
+}
+
+.card-tomorrow-event:hover .arrow-icon {
+    display: block;
+} 
+
+aside .side-menu .card-tomorrow-event:hover .description{
+    color: var(--purple-400);
 }
 
 aside .side-menu .card div {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 12px 16px;
     background-color: var(--gray-100);
     border-radius: 8px;
 }
@@ -97,6 +267,8 @@ aside .side-menu .card:not(:first-child) div {
 }
 
 aside .side-menu .card .count {
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 4px;
     font-weight: 500;
     font-size: 36px;
@@ -104,6 +276,7 @@ aside .side-menu .card .count {
 }
 
 aside .side-menu .card .description {
+    width: min-content;
     color: var(--gray-700);
     font-weight: 600;
     font-size: 14px;
@@ -150,9 +323,11 @@ main .container-content .home-page-content {
 
 main .container-content .welcome-wrapper {
     position: absolute;
-    width: 100% ;
-    background-color: var(--dark);
-    border-radius: 8px;
+    top: 0;
+    width: 100%;
+    /* padding-top: 20px; */
+    border-radius: 0 0 8px 8px;
+    background-color: var(--white);
     color: var(--gray-600);
     font-weight: 600;
     font-size: 24px;
@@ -163,7 +338,7 @@ main .container-content .welcome-wrapper .welcome-container {
     display: flex;
     flex-direction: row;
     padding-bottom: 22px;
-    border-radius: inherit;
+    border-radius: 8px;
     background-image: url("./images/bg.jpg");
 }
 
@@ -186,6 +361,7 @@ main .container-content .welcome-wrapper .header {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    width: 100%;
     padding: 25px 40px 0 40px;
 }
 
@@ -204,9 +380,9 @@ main .container-content .welcome-wrapper.isActive .header {
 }
 
 main .container-content .welcome-wrapper .body {
+    height: 498px;
     display: none;
     flex-direction: column;
-    margin-bottom: 366px;
     padding: 0 40px;
 }
 
@@ -251,10 +427,10 @@ main .container-content .welcome-wrapper .body span .link-create-events {
 
 main .container-content .welcome-wrapper .welcome-btn {
     display: flex;
-    align-self: self-end;
+    align-self: center;
     align-items: center;
     padding: 0;
-    margin: 0 38px 8px auto;
+    margin-left: auto;
     background-color: transparent;
     border: none;
     white-space: nowrap;
@@ -264,8 +440,8 @@ main .container-content .welcome-wrapper .welcome-btn {
     line-height: 20px;
 }
 
-main .container-content .welcome-wrapper.isActive .welcome-btn {
-    margin-bottom: 2px;
+main .container-content .welcome-wrapper .welcome-btn.mobile {
+    display: none;
 }
 
 main .container-content .welcome-wrapper.isActive .welcome-btn svg {
@@ -289,11 +465,24 @@ main .container-content .welcome-wrapper.isActive~.live-events {
     padding-top: 265px;
 }
 
-main .container-content .events-wrap h4 {
+main .container-content h4 {
     position: relative;
+    display: flex;
+    align-items: center;
+    gap: 8px;
     color: var(--dark);
     margin: 0 0 20px 0;
     font-weight: 600;
+}
+
+main .container-content .event-count {
+    padding: 2px 8px;
+    background-color: var(--white);
+    border-radius: 100px;
+    color: var(--dark);
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
 }
 
 main .container-content .welcome-wrapper.isActive~.events-wrap h4 {
@@ -364,6 +553,19 @@ main .container-content .events-wrap .event-container .event-card .time {
     line-height: 20px;
 }
 
+main .container-content .events-wrap .event-container .event-card .btn-wrapper {
+    display: flex;
+    gap: 8px;
+}
+
+main .container-content .events-wrap .event-container .event-card .btn-wrapper .secondary-btn {
+    width: 100px;
+}
+
+main .container-content .events-wrap .event-container .event-card .btn-wrapper .primary-btn {
+    width: 100%;
+}
+
 main .container-content .events-wrap .event-container .event-card .time .container {
     margin: 0;
 }
@@ -382,7 +584,7 @@ main .container-content .events-wrap .event-container .event-card h4 {
 }
 
 main .container-content .events-wrap .event-container .event-card .description {
-    margin: 0 0 36px 0;
+    margin: 0 0 auto 0;
     color: var(--gray-600);
     font-weight: 500;
     font-size: 14px;
@@ -398,7 +600,7 @@ main .container-content .events-wrap .event-container .event-card .description {
     left: 0;
     right: 0;
     margin: 0 15px;
-    overflow-x: auto;
+    overflow: hidden;
     background-color: var(--white);
     border-radius: 8px;
 }
@@ -429,7 +631,7 @@ main .container-content .events-wrap .event-container .event-card .description {
     display: flex;
     flex-direction: column;
     gap: 4px;
-    min-width: 120px;
+    min-width: 96px;
     padding: 8px;
     background-color: var(--gray-100);
     border-radius: 8px;
@@ -445,7 +647,6 @@ main .container-content .events-wrap .event-container .event-card .description {
     font-size: 14px;
     line-height: 20px;
 }
-
 
 .side-menu-mobile .counter-wrap .card:not(:first-child) div {
     grid-column: 2 span;
@@ -474,12 +675,108 @@ main .container-content .events-wrap .event-container .event-card .description {
     padding: 18px;
 }
 
-    /*Aside   */
+/* Mobile-menu-company */
 
-aside {
-    min-width: 448px;
-    padding: 20px 20px 20px 0;
+.mobile-menu-company {
+    position: absolute;
+    right: 16px;
+    top: 16px;
+    display: none;
+    
 }
+
+.mobile-menu-company.is-active .mobile-menu-company__body {
+    display: block;
+    z-index: 5;
+}
+
+.mobile-menu-company__header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: var(--purple-100);
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+
+.mobile-menu-company__body {
+    display: none;
+
+    position: absolute;
+    right: 0;
+    top: 100%;
+    background-color: #FFFFFF;
+    box-shadow: 0px 4px 20px rgba(20, 14, 23, 0.08);
+
+    border-radius: 8px;
+    padding: 8px;
+    margin-top: 10px;
+}
+
+.mobile-menu-company__item {
+    display: flex;
+    gap: 8px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    margin: 0 8px;
+    padding: 16px 20px;
+    border-radius: 8px;
+
+    cursor: pointer;
+    transition: all 0.2s linear;
+}
+
+.mobile-menu-company__item.delete {
+    color: var(--red-300);
+}
+
+.mobile-menu-company__item:hover {
+    background-color: #E7D1F9;
+}
+
+.mobile-menu-company__item:active {
+    border-color: #DDBFF7;
+}
+
+.mobile-menu-company__disabled {
+    color: #A2A2A2;
+}
+
+.mobile-menu-company-border {
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin: 12px 0;
+    background-color: var(--gray-300);
+}
+
+.mobile-menu-company__clear-btn {
+    display: flex;
+    justify-content: center;
+    padding: 8px 14px;
+    border-radius: 8px  ;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    color: #A24DE8;
+
+    cursor: pointer;
+    transition: all 0.2s linear;
+}
+
+.mobile-menu-company__clear-btn:hover {
+    background-color: #E7D1F9;
+}
+
+.mobile-menu-company__clear-btn:active {
+    border-color: #DDBFF7;
+}
+
 
 @media screen and (max-width: 1919px) {
 
@@ -492,11 +789,11 @@ aside {
     }
 
     .hide .navigation__list-item {
-        padding: 35px 26px;
+        padding: 30px 28px;
     }
 
     .user {
-        padding: 16px 18px;
+        padding: 16px 2px;
     }
 
     aside {
@@ -546,16 +843,13 @@ aside {
     }
 
     main .container-content .events-wrap .event-container {
-        width: 100%;
+        width: 556px;
     }
 
     main .container-content .welcome-wrapper.isActive~.live-events {
         padding-top: 250px;
     }
 
-    main .container-content .welcome-wrapper .body {
-        margin-bottom: 372px;
-    }
 
     main .container-content .welcome-wrapper.isActive .header .user-info {
         align-items: center;
@@ -565,8 +859,9 @@ aside {
         padding-bottom: 20px;
     }
 
-    main .container-content .welcome-wrapper .header {
-        padding-right: 0;
+    main .container-content h4 {
+        font-size: 18px;
+        line-height: 24px;
     }
 
     main .container-content .welcome-wrapper.isActive .welcome-btn {
@@ -576,6 +871,10 @@ aside {
     main .container-content .home-page-content.empty .welcome-wrapper.isActive .welcome-btn {
         margin-top: 19px;
         margin-bottom: 7px;
+    }
+
+    main .container-content .welcome-wrapper.isActive~.events-wrap .event-container {
+        width: 556px;
     }
 
     main .container-content .welcome-wrapper,
@@ -611,8 +910,17 @@ aside {
         padding-left: 0;
         padding-top: 64px;
     }
+    /* Navigation-btn-chat-mobile */
+
+    .btn-chat-mobile {
+    display: block;
+    }
 
     /*Navigation*/
+    main {
+        flex-direction: column;
+        padding: 64px 0 0 0;
+    }
 
     main .navigation.hide {
         flex-direction: row;
@@ -663,6 +971,10 @@ aside {
         padding: 0;
     }
 
+    main .container-content h4 {
+        justify-content: space-between;
+    }
+
     main .container-content .welcome-wrapper {
         position: relative;
         border-radius: 0;
@@ -671,7 +983,8 @@ aside {
 
     main .container-content .welcome-wrapper .welcome-container {
         display: block;
-        padding: 20px 15px 38px 15px;
+        padding: 20px 15px 44px 15px;
+        border-radius: 0;
     }
 
     main .container-content .welcome-wrapper.isActive .header,
@@ -701,6 +1014,7 @@ aside {
     }
 
     main .container-content .welcome-wrapper .body {
+        height: auto;
         margin: 0;
     }
 
@@ -717,8 +1031,17 @@ aside {
     }
 
     main .container-content .welcome-wrapper .welcome-btn {
-        align-self: flex-start;
-        margin: 16px 0 8px 0;
+        display: none;
+    }
+
+    main .container-content .welcome-wrapper .welcome-btn.mobile {
+        display: flex;
+        margin-top: 18px;
+        margin-left: 0;
+    }
+
+    main .container-content .welcome-wrapper.isActive .welcome-btn.mobile {
+        margin-top: 0;
     }
 
 
@@ -750,6 +1073,9 @@ aside {
         height: 180px;
     }
 
+    .card-image img {
+        width: 90px;
+    }
 
     main .container-content .events-wrap .event-container {
         width: auto;
@@ -769,21 +1095,21 @@ aside {
     }
 
     main .container-content .events-wrap .event-container .length-time {
-        width: 52px;
-        height: 52px;
-        right: -8px;
-        top: -8px;
-        left: auto;
+        width: 40px;
+        height: 40px;
+        top: -14px;
+        left: -14px;
     }
 
     main .container-content .events-wrap .event-container .length-time h5,
     main .container-content .events-wrap .event-container .length-time span {
+        white-space: nowrap;
         font-size: 12px;
-        line-height: 14px;
+        line-height: 12px;
     }
 
     main .container-content .events-wrap .event-container .length-time h5 {
-        margin-top: 11px;
+        margin-top: 7px;
     }
 
     main .container-content .events-wrap .event-container .event-card .time svg {
@@ -797,6 +1123,14 @@ aside {
         overflow: hidden;
         text-overflow: ellipsis;
         margin-bottom: 16px;
+    }
+
+    .upcoming-event-wrap {
+        padding: 0 16px 20px 16px;
+    }
+
+    .upcoming-event-container .event-card {
+        padding: 16px;
     }
 
     .event-card .btn {
@@ -825,6 +1159,12 @@ aside {
 
     aside {
         display: none;
+    }
+
+    /* Mobile-menu-company */
+
+    .mobile-menu-company {
+        display: block;
     }
 
 }
